@@ -1,6 +1,7 @@
 Revision history for html-autotag-ruby
 
 0.0.6
+    - implemented empty param
 
 0.0.5
     - moved docs to README (trying to render for rubydoc.info site)
